--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -26,8 +26,8 @@
             </video>
         </section>
     </main>
-    <footer>
-        &copy; 2024 TechCon. All rights reserved.
+   <footer>
+        <p>&copy; 2024 TechCon. All rights reserved.</p>
     </footer>
 </body>
 </html>
