--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -17,12 +17,13 @@
         </nav>
     </header>
     <main>
+        </article>
         <article id="history">
             <h2>History of TechCon</h2>
             <p>TechCon started in 2008 as a small gathering of tech enthusiasts in Silicon Valley. Over the years, it has grown into one of the largest tech conferences globally, attracting thousands of attendees annually.</p>
             <img src="history.jpg" alt="TechCon historical image">
         </article>
-        
+        </article>
         <article id="mission">
             <h2>Mission</h2>
             <p>The mission of TechCon is to provide a platform for technology professionals to exchange ideas, explore new trends, and foster innovation. We aim to inspire and empower the next generation of tech leaders.</p>
