--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -17,7 +17,7 @@
         </nav>
     </header>
     <main>
-        <form>
+        <form><form action="/submit-form" method="post">
             <label for="fullname">Full Name</label>
             <input type="text" id="fullname" name="fullname" required>
 
@@ -37,6 +37,8 @@
 
             <button type="submit">Register Now</button>
         </form>
+            
+        
     </main>
     <footer>
         <p>copyright; 2024 TechCon. All rights reserved.</p>
